tests/snapshots/errors_on_if_branch_mismatch.snap
---
source: tests/m02.rs
expression: result
---
Err(
    ParseError {
        message: "branches of `if` have different types: `i32` vs `bool`",
        span: Span {
            start: 24,
            end: 52,
            file: FileId(
                1,
            ),
        },
    },
)
