tests/snapshots/errors_on_non_fn_call.snap
---
source: tests/m02.rs
expression: result
---
Err(
    ParseError {
        message: "`x` is not a function",
        span: Span {
            start: 39,
            end: 40,
            file: FileId(
                1,
            ),
        },
    },
)
