tests/snapshots/errors_on_non_ident_callee.snap
---
source: tests/m02.rs
expression: result
---
Err(
    ParseError {
        message: "callee must be a function name or path (e.g. `Box::new(v)`)",
        span: Span {
            start: 24,
            end: 27,
            file: FileId(
                1,
            ),
        },
    },
)
