tests/snapshots/errors_on_op_mismatch.snap
---
source: tests/m02.rs
expression: result
---
Err(
    ParseError {
        message: "binary operator `+` requires both operands to be `i32`, found `i32` and `bool`",
        span: Span {
            start: 24,
            end: 32,
            file: FileId(
                1,
            ),
        },
    },
)
