tests/snapshots/errors_on_unexpected_token.snap
---
source: tests/m01.rs
expression: result
---
Err(
    ParseError {
        message: "expected `;`, found `}`",
        span: Span {
            start: 26,
            end: 27,
            file: FileId(
                1,
            ),
        },
    },
)
