tests/snapshots/lexer_rejects_ampersand.snap
---
source: tests/m01.rs
expression: result
---
Err(
    ParseError {
        message: "references are a Level 2 feature, not yet supported in this version of rustviz",
        span: Span {
            start: 39,
            end: 40,
            file: FileId(
                1,
            ),
        },
    },
)
